crates/rho-tui/tests/snapshots/snapshots__modal_login_provider_picker.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---




           ┌ Login ────────────────────────────────────────┐
           │search:                                        │
           │                                               │
           │› Anthropic (Claude Pro/Max) — anthropic       │
           │  OpenAI Codex (ChatGPT) — openai-codex        │
           │  GitHub Copilot — github-copilot              │
           │                                               │
           │                                               │
           │Enter selects · Escape closes                  │
           └───────────────────────────────────────────────┘
