crates/rho-tui/tests/snapshots/snapshots__modal_model_picker.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---



           ┌ Model: anthropic ─────────────────────────────┐
           │Tabs: ● All models  ○ Scoped models            │
           │search:                                        │
           │                                               │
           │› anthropic:claude-opus (current)              │
           │  anthropic:claude-sonnet ★                    │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │Enter selects · Tab switches tabs · Escape clos│
           └───────────────────────────────────────────────┘
