crates/rho-tui/tests/snapshots/snapshots__modal_notice_m7.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---






              ┌ Login / logout ────────────────────────┐
              │Login / logout lands in M7 (the WASM    │
              │extension / login runtime). Press Escape│
              │to close.                               │
              │                                        │
              └────────────────────────────────────────┘
