crates/rho-tui/tests/snapshots/snapshots__modal_oauth_login.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---





           ┌ Login: Anthropic (Claude Pro/Max) ────────────┐
           │Complete login in your browser.                │
           │                                               │
           │https://claude.ai/oauth/authorize?client_id=dem│
           │                                               │
           │›                                              │
           │Enter submits · Escape goes back · Ctrl+D close│
           └───────────────────────────────────────────────┘
