crates/rho-tui/tests/snapshots/snapshots__modal_oauth_login_device.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---





           ┌ Login: GitHub Copilot ────────────────────────┐
           │Open the URL and enter code: ABCD-1234         │
           │                                               │
           │https://github.com/login/device                │
           │                                               │
           │›                                              │
           │Enter submits · Escape goes back · Ctrl+D close│
           └───────────────────────────────────────────────┘
