crates/rho-tui/tests/snapshots/snapshots__modal_session_picker.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---




           ┌ Sessions ─────────────────────────────────────┐
           │› sess-001  Refactor parser  claude            │
           │  sess-002  Untitled  claude                   │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │Enter selects · Escape closes                  │
           └───────────────────────────────────────────────┘
