crates/rho-tui/tests/snapshots/snapshots__modal_theme_picker.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---





                  ┌ Theme ──────────────────────────┐
                  │› tau-dark ✓                     │
                  │  tau-light                      │
                  │  high-contrast                  │
                  │                                 │
                  │                                 │
                  │Enter selects · Escape closes    │
                  └─────────────────────────────────┘
