crates/rho-tui/tests/snapshots/snapshots__modal_tree_picker.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---



           ┌ Session Tree ─────────────────────────────────┐
           │  user: start                                  │
           │› ◉ assistant: reply                           │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │                                               │
           │Enter branches · S summarizes · C custom summar│
           └───────────────────────────────────────────────┘
