crates/rho-tui/tests/snapshots/snapshots__rho_splash.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---



                                        ρ
                               ρω  ·  ロ ー   ·  रो

               π Pi·TypeScript   →   τ tau·Python   →   ρ rho·Rust

                          a Rust coding agent, oxidized
                ρ · ~302× faster cold start than τ · ~21× lighter

 / commands  ·  Ctrl+P model  ·  Ctrl+R sessions  ·  !cmd shell  ·  Ctrl+D quit

           · did you know — ρ reads and writes τ's exact session files
