crates/rho-tui/tests/snapshots/snapshots__sidebar.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---
ρ

 Refine sidebar

 session
 provider anthropic
 model claude
 thinking medium
 tools 2
 skills 1

 activity
 3 turns, 7 tool calls

 cumulative usage
 42k in, 1.5k out · ~$0.42

 context
 • AGENTS.md

 tools
 • bash
 • read

 skills
 • review

 prompts
 No prompt templates

 extensions
 No extensions
