crates/rho-tui/tests/snapshots/snapshots__status_line.snap
---
source: crates/rho-tui/tests/snapshots.rs
expression: rendered
---
/work/project (main)       12k/128k context  anthropic:claude (medium)
